--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -16,9 +15,12 @@
     --cool-gray: #d6d6d6;
     --white: #fff;
 }
-body{
+
+body {
     overflow-x: hidden !important;
 }
+
+
 /* @font-face {
     font-family: Helevtica;
     src: url(../fonts/Nimbus-Sans-D-OT-Light_32752.ttf);
@@ -107,6 +109,10 @@ nav .nav-content .nav-links-content .nav-list-ul li a::after {
     z-index: 999;
 }
 
+nav .nav-content .nav-links-content .nav-list-ul li a.active::after {
+    width: 100%;
+}
+
 nav .nav-content .nav-links-content .nav-list-ul li a:hover::after {
     width: 100%;
 }
@@ -150,11 +156,9 @@ nav .nav-content .nav-links-content .btn-list span {
         right: 84px;
         top: -4px;
     }
-
     .nav-list-ul .c-btn-list {
         display: none;
     }
-
     nav .nav-content .nav-links-content .nav-list-ul {
         width: 100% !important;
     }
@@ -212,7 +216,6 @@ nav .nav-content .nav-links-content .btn-list span {
     .home-sec {
         overflow: hidden;
     }
-
     nav .nav-content .nav-links-content .nav-list-ul {
         align-items: center;
         flex-direction: column;
@@ -226,7 +229,6 @@ nav .nav-content .nav-links-content .btn-list span {
         justify-content: space-evenly;
         overflow: hidden;
     }
-
     nav .nav-content .nav-links-content {
         flex-direction: row-reverse;
         width: 80%;
@@ -234,7 +236,6 @@ nav .nav-content .nav-links-content .btn-list span {
         align-items: center;
         justify-content: space-between;
     }
-
     nav .nav-content .nav-links-content .btn-list {
         display: flex;
         flex-direction: column;
@@ -243,16 +244,13 @@ nav .nav-content .nav-links-content .btn-list span {
         width: 40px;
         height: 40px;
     }
-
     nav .nav-content .nav-logo-content {
         width: fit-content;
     }
-
     .nv-list-content {
         display: flex;
         justify-content: end;
     }
-
     .nav-list-ul .c-btn-list {
         display: flex;
         justify-content: center;
@@ -280,6 +278,27 @@ nav .nav-content .nav-links-content .btn-list span {
     z-index: 999;
     width: inherit;
     left: 0;
+}
+
+.home-sec .container .nav-active {
+    position: fixed;
+    top: 0;
+    background: #fff;
+    box-shadow: 0 3px 2px -2px rgb(0 0 0 / 10%);
+    padding: 11px 0;
+}
+
+.home-sec .container .nav-active .logo {
+    width: 54px;
+}
+
+nav.nav-active .nav-content .nav-links-content .nav-list-ul li a {
+    color: #6e6c6c;
+}
+
+nav.nav-active .nav-content .nav-links-content .nav-list-ul li a.active,
+nav.nav-active .nav-content .nav-links-content .nav-list-ul li a:hover {
+    color: #333;
 }
 
 .home-sec .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
@@ -344,15 +363,12 @@ nav .nav-content .nav-links-content .btn-list span {
         max-width: 350px;
         transform: translateY(50%);
     }
-
     .hero-text-box .hero-page-title {
         font-size: 35px;
     }
-
     .logo {
         width: 50px;
     }
-
     .lang-list {
         margin-left: 10px;
     }
@@ -419,7 +435,6 @@ nav .nav-content .nav-links-content .btn-list span {
     .columns-section .ss-box-body .ss-box-title {
         font-size: 15px;
     }
-
     .columns-section .col-6.col-lg-3 {
         padding: 0 10px;
     }
@@ -525,11 +540,9 @@ nav .nav-content .nav-links-content .btn-list span {
     .success-section .col-lg-6 .more-div {
         bottom: -30px;
     }
-
     .success-info {
         padding: 20px 55px;
     }
-
     .success-section .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
         top: 14%;
     }
@@ -539,11 +552,9 @@ nav .nav-content .nav-links-content .btn-list span {
     .success-content {
         flex-direction: column-reverse;
     }
-
     .success-section .col-lg-6 .more-div {
         margin-top: 30px;
     }
-
     .success-section .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
         left: 50%;
         top: 3%;
@@ -554,7 +565,6 @@ nav .nav-content .nav-links-content .btn-list span {
     .success-info {
         padding: 30px;
     }
-
     .success-section .sec-title {
         font-size: 47px;
     }
@@ -564,7 +574,6 @@ nav .nav-content .nav-links-content .btn-list span {
     .success-info {
         padding: 15px;
     }
-
     .success-section .sec-title {
         font-size: 35px;
     }
@@ -629,7 +638,6 @@ nav .nav-content .nav-links-content .btn-list span {
     .our-mission .our-mission-content .our-mission-info {
         padding: 50px 0 40px 50px;
     }
-
     .our-mission .our-mission-content .our-mission-info .missioin-text {
         font-size: 17px;
     }
@@ -639,7 +647,6 @@ nav .nav-content .nav-links-content .btn-list span {
     .our-mission .our-mission-content {
         flex-direction: column;
     }
-
     .our-mission .our-mission-content .our-mission-info {
         padding: 40px 0 0;
     }
@@ -649,11 +656,9 @@ nav .nav-content .nav-links-content .btn-list span {
     .our-mission .sec-title {
         font-size: 35px;
     }
-
     .our-mission .our-mission-content .more-div {
         margin-left: 60%;
     }
-
     .our-mission {
         margin-top: 0;
     }
@@ -663,11 +668,9 @@ nav .nav-content .nav-links-content .btn-list span {
     .our-mission .our-mission-content .more-div {
         margin-left: 55%;
     }
-
     .our-mission .container {
         padding-top: 30px;
     }
-
     .mission-row {
         max-width: 270px;
     }
@@ -721,14 +724,12 @@ nav .nav-content .nav-links-content .btn-list span {
     .sp-grog-pag {
         padding: 10px;
     }
-
     .programs-box .prog-box-dot {
         top: -7px;
         left: -9px;
         width: 30px;
         height: 30px;
     }
-
     .our-program-section .programs-box {
         box-shadow: 0 1px 6px 0 rgb(0 0 0 / 20%);
     }
@@ -781,11 +782,9 @@ nav .nav-content .nav-links-content .btn-list span {
         flex-direction: column;
         align-items: center;
     }
-
     .our-program-section .programs-box {
         padding: 25px 0;
     }
-
     .our-program-section .sec-title {
         font-size: 45px;
     }
@@ -888,7 +887,6 @@ img.our-delighted-bg-img {
     .our-delighted .sec-title {
         font-size: 35px;
     }
-
     .our-deli-text {
         font-size: 16px;
     }
@@ -898,7 +896,6 @@ img.our-delighted-bg-img {
     .our-delighted .sec-title {
         font-size: 29px;
     }
-
     .our-delighted .sec-title .line-word::after {
         bottom: 7px;
     }
@@ -1004,7 +1001,6 @@ img.our-delighted-bg-img {
     .people-happen .phimg {
         width: 250px;
     }
-
     .people-happen {
         padding-top: 40px;
     }
@@ -1150,12 +1146,10 @@ img.our-delighted-bg-img {
         min-height: 300px;
         max-width: 505px;
     }
-
     .people-happen .people-happen-content .ph-img-box .ph-meet-box {
         left: 4px;
         width: calc(100% - 3px);
     }
-
     .people-happen .people-happen-content .ph-img-box .ph-meet-box h2 {
         font-size: 22px;
     }
@@ -1165,12 +1159,10 @@ img.our-delighted-bg-img {
     .people-happen .people-happen-content .ph-img-box .ph-info-box {
         padding: 32px 20px 20px;
     }
-
     .people-happen .people-happen-content .ph-img-box .ph-info-box .ph-name {
         left: 3%;
         font-size: 12px;
     }
-
     .people-happen .people-happen-content .ph-img-box .ph-details {
         font-weight: 600;
     }
@@ -1186,11 +1178,9 @@ img.our-delighted-bg-img {
     .people-happen .people-happen-content .ph-img-box .ph-details {
         font-size: 16px;
     }
-
     .people-happen .sec-title {
         font-size: 27px;
     }
-
     .people-happen .sec-title .line-word::after {
         bottom: 6px;
     }
@@ -1269,7 +1259,6 @@ img.our-delighted-bg-img {
     .incubator .sec-title {
         font-size: 34px;
     }
-
     .incubator .incubator-content .inc-img-box {
         justify-content: end;
     }
@@ -1358,7 +1347,6 @@ img.our-delighted-bg-img {
     .people-talking .sec-title {
         font-size: 50px;
     }
-
     .incubator .inc-textt {
         font-size: 16px;
     }
@@ -1368,15 +1356,12 @@ img.our-delighted-bg-img {
     .people-talking .sec-title {
         font-size: 35px;
     }
-
     .people-talking-imgs-boxs {
         column-gap: 24px;
     }
-
     .people-talking-imgs-boxs img {
         margin-bottom: 20px;
     }
-
     .people-talking .sec-title .line-word::after {
         bottom: 7px;
     }
@@ -1483,11 +1468,9 @@ img.our-delighted-bg-img {
     .stay-in .sec-title {
         font-size: 35px;
     }
-
     .stay-in .sec-title .line-word::after {
         bottom: 8px;
     }
-
     .stay-in .stay-in-content .stey-input-box {
         width: 300px;
     }
@@ -1597,32 +1580,27 @@ footer hr {
     .footer-colm:nth-child(1) {
         width: 100%;
     }
-
     .footer-colm:nth-child(2),
     .footer-colm:nth-child(3) {
         width: 45%;
         margin-top: 30px;
     }
-
     .footer-top-section {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-
     .footer-bottom-section .bf-links-box a:not(:last-of-type) {
         margin-right: 40px;
     }
 }
 
 @media(max-width:400px) {
-
     .footer-colm:nth-child(2),
     .footer-colm:nth-child(3),
     .footer-top-section .cont-text {
         width: 100%;
     }
-
     .footer-bottom-section .bf-links-box a:not(:last-of-type) {
         margin-right: 20px;
     }
@@ -1694,11 +1672,9 @@ footer hr {
     .go-startup .startup-title {
         font-size: 28px;
     }
-
     .go-startup .start-min-title {
         font-size: 24px;
     }
-
     .go-startup .container .abs-proj-img {
         top: -190px;
         max-width: 190px;
@@ -1709,7 +1685,6 @@ footer hr {
     .go-startup .startup-title {
         font-size: 24px;
     }
-
     .go-startup .start-min-title {
         font-size: 18px;
     }
@@ -1733,11 +1708,9 @@ footer hr {
     .proj-couple-imgs img {
         object-fit: contain;
     }
-
     .proj-couple-imgs {
         column-gap: 25px;
     }
-
     .proj-couple-imgs {
         padding: 4px;
         margin-bottom: 30px;
@@ -1751,7 +1724,6 @@ footer hr {
         padding: 0;
         margin-bottom: 30px;
     }
-
     .proj-couple-imgs img:first-of-type {
         margin-bottom: 10px;
     }
@@ -1826,7 +1798,6 @@ a {
     .our-program-section .sec-title {
         font-size: 25px;
     }
-
     .our-program-section .sec-title .line-word::after {
         bottom: 4px;
     }
